
if ENABLE_PKCSCCA_MIGRATE
PKCSCCA_MIGRATE_DIR = pkcscca_migrate
endif

if ENABLE_ICSFTOK
PKCSICSF_DIR = pkcsicsf
endif

if ENABLE_PKCSEP11_MIGRATE
PKCSEP11_MIGRATE_DIR = pkcsep11_migrate
endif

if ENABLE_CCATOK
PKCSCCA_DIR = pkcscca
endif

SUBDIRS = pkcsslotd pkcsconf $(PKCSICSF_DIR) $(PKCSCCA_MIGRATE_DIR) $(PKCSEP11_MIGRATE_DIR) $(PKCSCCA_DIR)
