
if ENABLE_ICSFTOK
PKCSICSF_DIR = pkcsicsf
endif

if ENABLE_PKCSEP11_MIGRATE
PKCSEP11_MIGRATE_DIR = pkcsep11_migrate
endif

if ENABLE_PKCSEP11_SESSION
PKCSEP11_SESSION_DIR = pkcsep11_session
endif

if ENABLE_CCATOK
PKCSCCA_DIR = pkcscca
endif

SUBDIRS = pkcsslotd pkcsconf $(PKCSICSF_DIR) $(PKCSEP11_MIGRATE_DIR) $(PKCSEP11_SESSION_DIR) $(PKCSCCA_DIR)
