incdir=${top_srcdir}/usr/include

opencryptoki_headers = ${incdir}/pkcs11/apiclient.h	\
		       ${incdir}/pkcs11/pkcs11types.h	\
		       ${incdir}/pkcs11/pkcs11.h

opencryptokiincludedir=$(includedir)/opencryptoki

opencryptokiinclude_HEADERS = $(opencryptoki_headers)

noinst_HEADERS = ${incdir}/pkcs11/apictl.h	\
		 ${incdir}/pkcs11/local_types.h	\
		 ${incdir}/pkcs11/pkcs32.h	\
		 ${incdir}/pkcs11/slotmgr.h	\
		 ${incdir}/pkcs11/stdll.h
